# kader

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  opencode.yml  pages.yml
.kader/: KADER.md
.qwen/: QWEN.md
assets/architecture/: cli_integration.mmd  cli_message_flow.mmd  cli_tool_confirmation.mmd  memory_flow.mmd  planner_executor_sequence.mmd  planner_executor_workflow.mmd
assets/design/: code1.html  code2.html
cli/: README.md  __init__.py  app.py  app.tcss  llm_factory.py  sessions_metadata.py  utils.py
cli/callbacks/: __init__.py
cli/commands/: __init__.py  base.py  connect.py  initialize.py  refresh.py  update.py
cli/settings/: __init__.py  settings.py
cli/tools/: __init__.py  loader.py
cli/widgets/: __init__.py  confirmation.py  conversation.py  input_mode.py  loading.py  todo_list.py
docs/: configuration.md  guide.md  index.md
docs/cli/: index.md
docs/core-framework/: agents.md  callbacks.md  index.md  memory.md  providers.md  subagents.md  tools.md
examples/: README.md  anthropic_example.py  command_callback_example.py  google_example.py  llm_agent_callback_example.py  memory_example.py  mistral_example.py  ollama_example.py  openai_compatible_example.py  planner_executor_example.py  planning_agent_example.py  react_agent_example.py  session_title_example.py  simple_agent.py  tools_example.py
examples/python_developer/: main.py
examples/skills/: hello_example.py  react_agent.py
kader/: README.md  __init__.py  config.py
kader/agent/: base.py  (+3 more)
tests/: conftest.py  test_agent_logger.py  test_agent_logger_integration.py  test_async_memory.py  test_base_agent.py  test_file_memory.py  test_hierarchical_memory.py  test_settings.py  test_subagents.py  test_todo_metadata.py  test_todo_tool.py
(+95 files in other folders)
