[project]
name = "kader"
version = "0.1.0"
description = "kader coding agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.6.1",
    "textual[syntax]>=6.8.0",
    "faiss-cpu>=1.9.0",
    "tenacity>=9.1.2",
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "wcmatch>=10.1",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
    "textual-dev>=1.8.0",
]
