[project]
name = "kader"
version = "2.6.2"
description = "kader coding agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.6.1",
    "rich>=14.0.0",
    "prompt-toolkit>=3.0.50",
    "faiss-cpu>=1.9.0",
    "tenacity>=9.1.2",
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
    "wcmatch>=10.1",
    "typing-extensions>=4.15.0",
    "jinja2>=3.1.6",
    "outdated>=0.2.2",
    "aiofiles>=25.1.0",
    "google-genai>=1.61.0",
    "google-api-core>=2.24.0",
    "mistralai>=1.12.0",
    "openai>=2.20.0",
    "python-frontmatter>=1.1.0",
    "anthropic>=0.83.0",
]

[project.scripts]
kader = "cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kader", "cli"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402", "F841", "F402"]
"tests/*" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
